# terrain-generation

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  vcpkg.json
cmake/: CPM.cmake  build_configuration.cmake
engine/: CMakeLists.txt
engine/ImGUI/: ImGUIManager.h
engine/InputHandler/: InputHandler.cpp  InputHandler.h
engine/MVP/: Interfaces.h  Observable.h  Signal.h
engine/game/: Game.cpp  Game.h
engine/graphics/camera/: Camera.h
engine/graphics/shaders/: Shader.cpp  Shader.h
engine/graphics/shaders/cube/: cube.frag
engine/graphics/shaders/triangle/: triangle.frag  triangle.vert
engine/graphics/shapes/: Cube.h  Map.h  Triangle.h
engine/imguiManager/: imguiManager.h
engine/scene/: Scene.cpp  Scene.h
game/: CMakeLists.txt  main.cpp
game/Player/: Player.cpp  Player.h
scripts/: linux-install.sh  osx-build-debug.sh  osx-build-release.sh  osx-install.sh  windows-build-debug.bat  windows-build-release.bat  windows-install.bat
src/: CMakeLists.txt  main.cpp
src/assets/shaders/: map.vert
src/scenes/: MainScene.cpp  MainScene.h  SceneEnum.h
utils/: CMakeLists.txt  Math.h  link.cpp
utils/design_patterns/: Factory.h  Singleton.h  TypeList.h
utils/math/: Math.h  Vector2.h
